@@ -22,9 +22,41 @@ require '../include/ispcp-lib.php';
 
 check_login(__FILE__);
 
+$theme_color = $cfg['USER_INITIAL_THEME'];
+
+$tpl = new pTemplate();
+$tpl->define_dynamic('page', $cfg['ADMIN_TEMPLATE_PATH'] . '/ispcp_updates.tpl');
+$tpl->define_dynamic('page_message', 'page');
+$tpl->define_dynamic('hosting_plans', 'page');
+$tpl->define_dynamic('update_message', 'page');
+$tpl->define_dynamic('update_infos', 'page');
+
+$tpl->assign(
+	array(
+		'TR_ADMIN_ISPCP_UPDATES_PAGE_TITLE' => tr('ispCP - Virtual Hosting Control System'),
+		'THEME_COLOR_PATH' => "../themes/$theme_color",
+		'THEME_CHARSET' => tr('encoding'),
+		'ISP_LOGO' => get_logo($_SESSION['user_id'])
+		)
+	);
+
+
 /* BEGIN common functions */
 function get_update_infos(&$tpl) {
 	global $cfg;
+
+	if (!$cfg['CHECK_FOR_UPDATES']) {
+		$tpl->assign(
+				array(
+					'UPDATE_MESSAGE' => '',
+					'UPDATE' => tr('Update checking is disabled!'),
+					'INFOS' => tr('Enable update at') . " <a href=\"settings.php\">" . tr('Settings') . "</a>"
+					)
+				);
+
+		$tpl->parse('UPDATE_INFOS', 'update_infos');
+		return false;
+	}
 
 	$info_url = "http://www.isp-control.net/download.html";
 	$last_update = "http://www.isp-control.net/latest.txt";
@@ -48,7 +80,8 @@ function get_update_infos(&$tpl) {
 	$current_version = (int)$cfg['BuildDate'];
 	if ($current_version < $last_update_result) {
 		$tpl->assign(
-			array('UPDATE_MESSAGE' => '',
+			array(
+				'UPDATE_MESSAGE' => '',
 				'UPDATE' => tr('New ispCP update is now available'),
 				'INFOS' => tr('Get it at') . " <a href=\"" . $info_url . "\" class=\"link\" target=\"ispcp\">" . $info_url . "</a>"
 				)
@@ -61,24 +94,6 @@ function get_update_infos(&$tpl) {
 }
 /* END system functions */
 
-$tpl = new pTemplate();
-$tpl->define_dynamic('page', $cfg['ADMIN_TEMPLATE_PATH'] . '/ispcp_updates.tpl');
-$tpl->define_dynamic('page_message', 'page');
-$tpl->define_dynamic('hosting_plans', 'page');
-$tpl->define_dynamic('update_message', 'page');
-$tpl->define_dynamic('update_infos', 'page');
-
-global $cfg;
-$theme_color = $cfg['USER_INITIAL_THEME'];
-
-$tpl->assign(
-	array('TR_ADMIN_ISPCP_UPDATES_PAGE_TITLE' => tr('ispCP - Virtual Hosting Control System'),
-		'THEME_COLOR_PATH' => "../themes/$theme_color",
-		'THEME_CHARSET' => tr('encoding'),
-		'ISP_LOGO' => get_logo($_SESSION['user_id'])
-		)
-	);
-
 /*
  *
  * static page messages.
@@ -88,12 +103,12 @@ gen_admin_mainmenu($tpl, $cfg['ADMIN_TEMPLATE_PATH'] . '/main_menu_system_tools.
 gen_admin_menu($tpl, $cfg['ADMIN_TEMPLATE_PATH'] . '/menu_system_tools.tpl');
 
 $tpl->assign(
-	array('TR_UPDATES_TITLE' => tr('ispCP updates'),
+	array(
+		'TR_UPDATES_TITLE' => tr('ispCP updates'),
 		'TR_AVAILABLE_UPDATES' => tr('Available ispCP updates'),
 		'TR_MESSAGE' => tr('No new ispCP updates available'),
 		'TR_UPDATE' => tr('Update'),
-		'TR_INFOS' => tr('Update details'),
-
+		'TR_INFOS' => tr('Update details')
 		)
 	);
 
@@ -102,10 +117,10 @@ gen_page_message($tpl);
 get_update_infos($tpl);
 
 $tpl->parse('PAGE', 'page');
-
 $tpl->prnt();
 
-if ($cfg['DUMP_GUI_DEBUG']) dump_gui_debug();
+if ($cfg['DUMP_GUI_DEBUG'])
+	dump_gui_debug();
 
 unset_messages();
 
