@@ -25,7 +25,7 @@ Read on for more details.
 ZIP AND TAR CODE
 ====================
 
-File: /includes/zip.lib.php 
+File: /includes/zip.lib.php
 By: Eric Mueller, Denis125 and Peter Listiak
 License: public domain
 
@@ -46,7 +46,7 @@ Note: This application was slightly modified for use with net2ftp
 DIFF CODE
 ====================
 
-File: /modules/updatefile/diff.inc.php 
+File: /modules/updatefile/diff.inc.php
 Website: http://www.holomind.de/phpnet/diff.php
 By: Daniel Unterberger <diff.phpnet@holomind.de>
 License: GPL
@@ -121,8 +121,8 @@ JUPLOAD UPLOAD APPLET
 Website: http://www.jupload.biz/ and http://www.haller-systemservice.net/
 By: Mike Haller
 
-JUpload is *NOT* free software. The net2ftp development team has purchased a 
-Commercial Enterprise License, which allows the redistribution of JUpload and the 
+JUpload is *NOT* free software. The net2ftp development team has purchased a
+Commercial Enterprise License, which allows the redistribution of JUpload and the
 use of it on an unlimited number of servers.
 
 You DO NOT HAVE TO PURCHASE an additional license of JUpload, unless you want
@@ -210,7 +210,7 @@ patent must be licensed for everyone's free use or not licensed at all.
 
   The precise terms and conditions for copying, distribution and
 modification follow.
-
+
 		    GNU GENERAL PUBLIC LICENSE
    TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION
 
@@ -265,7 +265,7 @@ above, provided that you also meet all of these conditions:
     License.  (Exception: if the Program itself is interactive but
     does not normally print such an announcement, your work based on
     the Program is not required to print an announcement.)
-
+
 These requirements apply to the modified work as a whole.  If
 identifiable sections of that work are not derived from the Program,
 and can be reasonably considered independent and separate works in
@@ -323,7 +323,7 @@ access to copy from a designated place, then offering equivalent
 access to copy the source code from the same place counts as
 distribution of the source code, even though third parties are not
 compelled to copy the source along with the object code.
-
+
   4. You may not copy, modify, sublicense, or distribute the Program
 except as expressly provided under this License.  Any attempt
 otherwise to copy, modify, sublicense or distribute the Program is
@@ -380,7 +380,7 @@ impose that choice.
 
 This section is intended to make thoroughly clear what is believed to
 be a consequence of the rest of this License.
-
+
   8. If the distribution and/or use of the Program is restricted in
 certain countries either by patents or by copyrighted interfaces, the
 original copyright holder who places the Program under this License
