@@ -1,6 +1,13 @@
 ispCP ω 1.0.0 Changelog
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
+2008-06-17 Benedikt Heintel
+	- GUI:
+		* Fixed #1231: Session conflict / redirection problem
+		* Fixed #1277: Adding CHECK_FOR_UPDATES in ispcp.conf
+		* Fixed #1351: Filemanager not work update RC4 -> RC5
+		* Fixed #1353: In admin/ispcp_debugger.php not all execute request are counted
+
 2008-06-15 Benedikt Heintel
 	- CONFIGS:
 		* Added maximum e-mail size
